<resources>
    <string name="app_name">HypnoTabac</string>
    <string name="prompt_email">Adresse email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_up">S\'inscrire</string>
    <string name="welcome">"Bienvenue !"</string>
    <string name="invalid_username">Nom d\'utilisateur incorrect.</string>
    <string name="invalid_password">Le mot de passe doit contenir plus de 5 caractères. </string>
    <string name="login_failed">"La connexion a échoué"</string>
    <string name="confirm_password">Confirmer le mot de passe</string>
    <string name="add">Ajouter</string>
    <string name="edit">Modifier</string>
    <string name="stats">Statistiques</string>
    <string name="prompt_first_name">Prénom</string>
    <string name="prompt_last_name">Nom de famille</string>
    <string name="remove">Supprimer</string>
    <string name="edit_client">Modifier le client</string>
    <string name="done">Valider</string>
    <string name="first_name_not_set">Prénom non spécifié</string>
    <string name="last_name_not_set">Nom de famille non spécifié</string>
    <string name="your_clients">Vos clients</string>
    <string name="your_questions">Vos questions</string>
    <string name="prompt_question">Entrez une question ici</string>
    <string name="prompt_response">Entrez votre réponse ici</string>
    <string name="logout">Se déconnecter</string>
    <string name="add_client">Ajouter un client</string>
    <string name="next">Suivant</string>
    <string name="other">Autre</string>
    <string name="back">Retour</string>
    <string name="confirm_email">Confirmer votre email</string>
    <string name="question_condition">Dans quelles conditions consommez-vous cette cigarette ?</string>
    <string name="not_registered_yet">Vous n\'avez pas encore de compte ?</string>
    <string name="already_signed_up">Déjà inscrit ?</string>
    <string name="edit_questions">Modifier les questions</string>
    <string name="add_question">Ajouter une question</string>
    <string name="add_cig">Ajouter une cigarette</string>
    <string name="see_stats">Voir les statistiques</string>
    <string name="question_indispensable">A quel point cette cigarette est-elle indispensable ?</string>
    <string name="c_no_cig_yet">Vous n\'avez pas encore consommé de cigarette.</string>
    <string name="h_no_cig_yet">Ce client n\'a pas encore consommé de cigarette.</string>
    <string name="forgot_password">Mot de passe oublié</string>
    <string name="not_enough_data">Il n\'y a pas encore assez de données pour afficher les graphiques.</string>
    <string name="client_explanation">Veuillez vous connecter sur l\'application à l\'aide du lien reçu par email. Si vous n\'avez rien reçu, vérifiez vos spams ou contactez votre thérapeute.</string>
    <string name="youre_a_client">Si vous êtes un client</string>
    <string name="youre_a_hypno">Si vous êtes un hypnothérapeute</string>
    <string name="hypno_explanation">Veuillez vous connecter ou créer un compte ci-dessous. Les comptes hypnothérapeute sont payants.</string>
    <string name="reset_password">Réinitialiser le mot de passe</string>
    <string name="send_reset_email">Envoyer</string>
    <string name="verify_email">Confirmez votre addresse email pour continuer</string>
    <string name="sign_up">Créer un compte</string>
</resources>
